--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,7 +7,7 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
+@import "../bower/bootstrap-toggle/css/bootstrap-toggle.min.css";
 
 /*
  * Globals
