--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,7 +8,7 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "../bower/bootstrap-toggle/css/bootstrap-toggle.min.css";
-
+@import "../vendor/select2-master/dist/css/select2.min.css";
 /*
  * Globals
  */
